@@ -116,19 +116,6 @@ Don't trust commit-IDs; match by ordinary metatada.  Will be useful if
 you have something like a CVS-NT repository in which per-file commits
 were made in such a way that the cliques don't have matching IDs.
 
--k::
-Specify RCS/CVS keyword expansion.  You can specify any of the CVS
-keyword expansion types: "kv" (keyword-value), "kvl"
-(keyword-value-locker), "k" (keyword only), "v" (value only), "o" (no
-expansion), or "b" (binary - no exansion, no line ending
-conversion). CVS's rules are: (1) if the master has -kb set in its
-internal keyword field, do that, otherwise (2) if an expansion type
-was set on the command line, do that, otherwise (3) if the file's
-internal keyword field is set, do that, otherwise use kv.
-cvs-fast-export behaves slightly differently; the default is kb rather
-than kkv, kvl is treated like kv, and ko is treated like kb (that
-is, no end-of-line normalization is ever performed).
-
 -g::
 generate a picture of the commit graph in the DOT markup language
 used by the graphviz tools, rather than fast-exporting.
