@@ -61,8 +61,8 @@ property cvs-revisions 11 README 1.2
 
 blob
 mark :5
-data 59
-$Revision: 1.3 $ should expand to someting with 1.3 in it.
+data 60
+$Revision: 1.3 $ should expand to something with 1.3 in it.
 
 commit refs/heads/master
 mark :6
